--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
    },
    "dependencies": {
       "axios": "^0.21.1",
+      "discord.js": "^12.5.1",
       "dotenv": "^8.2.0",
       "pg": "^8.5.1",
       "reflect-metadata": "^0.1.13",
