--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "axios": "^0.21.1",
       "discord.js": "^12.5.1",
       "dotenv": "^8.2.0",
+      "moment": "^2.29.1",
       "pg": "^8.5.1",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.2.31"
